--- a/front-end/src/app/core/players/player-form-modal/player-form-modal.component.scss
+++ b/front-end/src/app/core/players/player-form-modal/player-form-modal.component.scss
@@ -2,6 +2,10 @@
 @import 'src/styles/images.scss';
 @import '../../../../styles/common.scss';
 
+.top-btn {
+    display: flex;
+    justify-content: center;
+}
 
 .image {
     float: right;
