--- a/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.scss
+++ b/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.scss
@@ -4,6 +4,11 @@
 @import 'src/styles/layout.scss';
 @import 'src/styles/common.scss';
 
+.top-btn {
+    display: flex;
+    justify-content: center;
+}
+
 .new-question-form{
     margin-left: auto;
     margin-right: auto;
