--- a/front-end/src/app/core/quizzes/visibility/associate-player-modal.component.html
+++ b/front-end/src/app/core/quizzes/visibility/associate-player-modal.component.html
@@ -1,4 +1,6 @@
-<button type="button" class="btn btn-info" id="modal-associate" (click)="modalService.open(associate)">Associer à certains</button>
+<button type="button" class="btn btn-info" id="modal-associate" (click)="modalService.open(associate)">
+  Associer à certains
+</button>
 
 <ng-template #associate let-modal>
     <div class="modal-header">
