--- a/front-end/src/app/core/quizzes/visibility/associate-quiz-modal.component.html
+++ b/front-end/src/app/core/quizzes/visibility/associate-quiz-modal.component.html
@@ -1,7 +1,8 @@
+<div class="top-btn">
 <button class="btn btn-info" (click)="modalService.open(associateQuiz)">
   Rendre des quiz visibles
 </button>
-
+</div>
 <ng-template #associateQuiz let-modal>
     <div class="modal-header">
       <h4 class="modal-title" id="modal-basic-title">Cocher les quiz que {{player.name}} pourra voir</h4>
