--- a/front-end/src/app/core/quizzes/visibility/visibility-choice-modal.component.html
+++ b/front-end/src/app/core/quizzes/visibility/visibility-choice-modal.component.html
@@ -1,6 +1,8 @@
+<div class="top-btn">
 <button type="button" class="btn btn-info" id="modal-visibilityChoice" (click)="modalService.open(visibilityChoiceModal)">
   Modifier la visibilité du quiz
 </button>
+</div>
 
 <ng-template #visibilityChoiceModal let-modal>
     <div class="modal-header">
