--- a/front-end/src/app/core/quizzes/visibility/visibility-choice-modal.component.scss
+++ b/front-end/src/app/core/quizzes/visibility/visibility-choice-modal.component.scss
@@ -4,6 +4,7 @@
 @import 'src/styles/layout.scss';
 @import 'src/styles/common.scss';
 
-.left-button{
-   font-size: 1.5vw;
+.top-btn {
+   display: flex;
+   justify-content: center;
 }
