--- a/front-end/src/app/start/password/password.component.html
+++ b/front-end/src/app/start/password/password.component.html
@@ -1,4 +1,4 @@
-<app-header [title]="headerTitle"></app-header>
+<app-header [isHomeBrand]="true" [title]="headerTitle"></app-header>
 <div class="goback-button" routerLink= "/">
     <i class="fa fa-arrow-left" aria-hidden="true"></i>
 </div>
