--- a/front-end/src/app/core/players/player-view/player-view.component.html
+++ b/front-end/src/app/core/players/player-view/player-view.component.html
@@ -2,12 +2,13 @@
 <app-header [type]="'playerInfo'" [title]="headerTitle" [image]="playerPhoto" (tab)="onNavTabClicked($event)"></app-header>
 <div *ngIf  = "player">
 
-  <div *ngIf="currentTab=='info' && playerPhoto.url">
+  <div *ngIf="playerPhoto.url && (currentTab=='info' || currentTab!='stats' && currentTab!='quizzes')">
     <app-player-form-modal [player] = "player" [playerImage] = "playerPhoto"></app-player-form-modal>
   </div>
 
   <div *ngIf="currentTab=='quizzes' && quizVisible">
     <app-associate-quiz-modal [quizzes]="quizzes" [player]="player"></app-associate-quiz-modal>
+    <h3 style="text-align: center; margin-top: 0.5em; margin-bottom: 0.5em;">Liste des quiz actuellement visibles: </h3>
     <div class="quiz-list">
       <div class="fixed-container-bigger" *ngFor = "let quiz of quizVisible">
         <div class = "tag" *ngIf = "!globalService.isValid(quiz)">
@@ -23,7 +24,8 @@
     </div>
   </div>
 
-  <div *ngIf="currentTab=='stats' || currentTab!='quizzes' && currentTab!='info'">
+  <div *ngIf="currentTab=='stats'">
+    <h3 style="text-align: center; margin-top: 0.5em; margin-bottom: 0.5em;">Résultats obtenus: </h3>
     <app-statistics></app-statistics>
   </div>
 </div>
