--- a/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.html
+++ b/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.html
@@ -1,5 +1,5 @@
 <body>
-<app-header [type]="'quizInfo'"[title] = "headerTitle" [image] = "image"></app-header>
+<app-header [type]="'quizInfo'"[title] = "headerTitle" [image] = "image" (tab)="onNavTabClicked($event)"></app-header>
 <!--
 <div class="goback-button" *ngIf ="isValid(); else invalidBack" (click)="goBack()">
   <i class="fa fa-arrow-left" aria-hidden="true"></i>
@@ -10,14 +10,18 @@
 </div>
 </ng-template>-->
 
-<div *ngIf ="quiz && image.url" class="img-edit-block">
-  <app-quiz-form-modal [quiz] = "quiz" [image] = "image" ></app-quiz-form-modal>
-  <app-visibility-choice-modal [quiz] = "quiz" (hidden) = "switchHidden($event)"></app-visibility-choice-modal>
+<div *ngIf ="quiz && image.url">
+  <div *ngIf="currentTab=='info' || currentTab!='questions' && currentTab!='visibility'">
+    <app-quiz-form-modal [quiz] = "quiz" [image] = "image" ></app-quiz-form-modal>
+  </div>
+  <div *ngIf="currentTab=='visibility'">
+    <app-visibility-choice-modal [quiz] = "quiz" (hidden) = "switchHidden($event)"></app-visibility-choice-modal>
+  </div>
+  <div *ngIf="currentTab=='questions' && quiz.questions">
+    <app-question-list [quiz]="quiz"></app-question-list>
+  </div>
 </div>
 
-<div *ngIf ="quiz && quiz.questions">
-  <app-question-list [quiz]="quiz"></app-question-list>
-</div>
 </body>
 
 <ng-template #quizInvalid let-modal>
