--- a/front-end/src/app/core/database-image-modal/database-image-modal.component.scss
+++ b/front-end/src/app/core/database-image-modal/database-image-modal.component.scss
@@ -2,6 +2,10 @@
 @import "src/styles/variables";
 @import 'src/styles/images.scss';
 
+#imgBtn:hover {
+    cursor: pointer;
+}
+
 .responsive-list {
     display: flex;
     flex-direction: row;
