--- a/front-end/src/app/core/internet-image-modal/internet-image-modal.component.html
+++ b/front-end/src/app/core/internet-image-modal/internet-image-modal.component.html
@@ -1,4 +1,4 @@
-<label for="modal-imageWeb{{id}}" class="btn btn-success">Internet</label>
+<label id="imgBtn" for="modal-imageWeb{{id}}" class="btn btn-sm btn-secondary">Internet</label>
 <button type="button" class="hidden" id="modal-imageWeb{{id}}" (click)="modalService.open(weburlmodal)"></button>
 
 
