--- a/front-end/src/app/core/internet-image-modal/internet-image-modal.component.scss
+++ b/front-end/src/app/core/internet-image-modal/internet-image-modal.component.scss
@@ -1,3 +1,7 @@
 @import 'src/styles/card.scss';
 @import "src/styles/variables";
 @import 'src/styles/images.scss';
+
+#imgBtn:hover {
+    cursor: pointer;
+}
