modals btns order + color - manque plus que navbar question

--- a/front-end/src/app/core/internet-image-modal/internet-image-modal.component.html
+++ b/front-end/src/app/core/internet-image-modal/internet-image-modal.component.html
@@ -15,6 +15,6 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-outline-dark" (click)="onUrlClicked(modal)">Ok</button>
+      <button type="button" class="btn btn-primary" (click)="onUrlClicked(modal)">Ok</button>
     </div>
   </ng-template>
