--- a/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.scss
+++ b/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.scss
@@ -53,6 +53,12 @@
   cursor: pointer;
 }
 
+#imageBtns {
+    margin-top: 0.5em;
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+}
+
 .modal-larger {
     /*height: calc(100vh - 143px);
     min-height: 10em;
