--- a/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.scss
+++ b/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.scss
@@ -40,9 +40,19 @@
     margin: 0;
 }
 
+#imageBtns {
+    margin-top: 0.5em;
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+}
+
+#image64Btn:hover {
+    cursor: pointer;
+}
+/*
 .modal-larger {
     height: calc(100vh - 143px);
     min-height: 10em;
     max-height: 22em;
     overflow-y: auto; 
-}
+}*/
