--- a/front-end/src/app/core/quizzes/visibility/associate-player-modal.component.html
+++ b/front-end/src/app/core/quizzes/visibility/associate-player-modal.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-info" id="modal-associate" (click)="modalService.open(associate)">
+<button type="button" class="btn btn-sm btn-info" id="modal-associate" (click)="modalService.open(associate)">
   Associer à certains
 </button>
 
@@ -19,7 +19,7 @@
           </div>
         </form>
         <div class="modal-footer">
-            <button type="button" class="btn btn-outline-dark" (click)="submit();modal.close()">Ok</button>
+            <button type="submit" class="btn btn-primary" (click)="submit();modal.close()">Ok</button>
         </div>
     </div>
   </ng-template>
