--- a/front-end/src/app/core/quizzes/visibility/associate-quiz-modal.component.html
+++ b/front-end/src/app/core/quizzes/visibility/associate-quiz-modal.component.html
@@ -20,8 +20,8 @@
           </div>
         </form>
         <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" (click)="reset();modal.close()">Annuler</button>
-            <button type="button" class="btn btn-primary" (click)="submit();modal.close()">Ajouter</button>
-          </div>
+          <button type="button" class="btn btn-primary" (click)="submit();modal.close()">Ajouter</button>
+          <button type="button" class="btn btn-outline-secondary" (click)="reset();modal.close()">Annuler</button>
+        </div>
     </div>
   </ng-template>
