--- a/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.html
+++ b/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.html
@@ -15,50 +15,43 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <div class="modal-body modal-larger">
+  <div class="modal-body">
     <div >
       <form [formGroup]="quizForm">
-        <label class = "titre" for="name">Nom du quiz : </label>  
+        <label class = "titre" for="name" style="margin-bottom: 1em">Nom du quiz : </label>  
         <input class="quizName" size = "{{sizeInput()}}" type="text" id="name" [formControlName]="'name'">     
-        <br>
-        <br>
-        <label class = "titre" for="selectTheme">Thème : </label>
+        <label class = "titre" for="selectTheme" style="margin-bottom: 1em">Thème : </label>
         <select name="Thème" id="selectTheme" [formControlName]="'theme'">
         <option *ngFor = "let current_theme of THEME_LIST" [value] = "current_theme">
           {{current_theme}}
         </option>
-        </select><app-theme-form (themeAdded) = "initTheme($event)"></app-theme-form>
-        <br>
-        <br>
-        <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template>   
-        <br>
-        <br>
-        <label class = "titre" for="random">Déroulement aléatoire:</label>
+        </select><app-theme-form (themeAdded) = "initTheme($event)"></app-theme-form>  
+        <label class = "titre" for="random" style="margin-bottom: 1em">Déroulement aléatoire:</label>
         <input id="random" type="checkbox" [formControlName]="'random'">
+        <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template> 
         <ng-template [ngTemplateOutlet] = "displayImage"></ng-template>
       </form>
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" (click) = "reset();modal.close()">Annuler</button>
     <button type="button" class="btn btn-primary" (click)= "addOrUpdateQuiz();modal.close()">Valider</button>
+    <button type="button" class="btn btn-outline-secondary" (click) = "reset();modal.close()">Annuler</button>
   </div>
 </ng-template>
 
 
 <ng-template #buttonCharging>
-  <div class="dropdown">
-    <button class="new-button dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Ajouter une image depuis :
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <app-database-image-modal [imageTmp] = "imageTmp"></app-database-image-modal>
-      <br>
-      <app-internet-image-modal [imageTmp] = "imageTmp"></app-internet-image-modal>
-      <br>
-      <label for="image64QuizForm" class="btn btn-success" >Cet appareil</label>
-      <input type="file" class="hidden" id="image64QuizForm" (change)="globalService.onChangeFile($event,imageTmp)" accept="image/*">
-    </div>
+  <div>
+  <button type="button" class="btn btn-sm btn-info" data-toggle="collapse" data-target="#imgBtns">Ajouter une image 
+		<i class="fas fa-angle-down"></i></button>
+	<div id="imgBtns" class="collapse">
+    <span id="imageBtns">
+    <app-database-image-modal [imageTmp] = "imageTmp"></app-database-image-modal>
+		<app-internet-image-modal [imageTmp] = "imageTmp"></app-internet-image-modal>
+	    <label id="image64Btn" for="image64QuizForm" class="btn btn-sm btn-secondary">Cet appareil</label>
+		<input type="file" class="hidden" id="image64QuizForm" (change)="globalService.onChangeFile($event,imageTmp)" accept="image/*">
+  </span>
+  </div>
   </div>
 </ng-template>
 
