--- a/front-end/src/app/header/header.component.scss
+++ b/front-end/src/app/header/header.component.scss
@@ -7,10 +7,13 @@ a:hover {
 }
 .navbar-text {
   margin: auto;
+  text-align: center;
 }
 
 .text-center {
-  width: 90%;
+  width: 80%;
+  display: flex;
+  justify-content: center;
   text-align: center;
 }
 
