taille boutons dans collapse manque answers

--- a/front-end/src/app/core/database-image-modal/database-image-modal.component.html
+++ b/front-end/src/app/core/database-image-modal/database-image-modal.component.html
@@ -1,5 +1,5 @@
 
-<label id="imgBtn" for="modal-databaseimage{{id}}" class="btn btn-sm btn-secondary">Banque d'images</label>
+<label id="imgBtn" for="modal-databaseimage{{id}}" class="btn btn-sm btn-secondary" style="width: 9em;">Banque d'images</label>
 <button type="button" class="hidden" id="modal-databaseimage{{id}}" (click)="modalService.open(imgdbmodal)"></button>
 
 <ng-template #imgdbmodal let-modal>
