--- a/front-end/src/app/core/players/player-form-modal/player-form-modal.component.html
+++ b/front-end/src/app/core/players/player-form-modal/player-form-modal.component.html
@@ -18,35 +18,35 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <div class="modal-body modal-larger">
+  <div class="modal-body">
     <form class="player-form" [formGroup]="playerForm">
-      <label class = "titre" for="name">Nom: </label>  
+      <label class = "titre" for="name" style="margin-bottom: 1em;">Nom: </label>  
       <input type="text" size = "{{sizeInput()}}" id="name" [formControlName]="'name'">
-      <br>
       <div class = "imageAndButton">
-        <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template>    
+        <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template>
         <ng-template [ngTemplateOutlet] = "displayImage"></ng-template>    
       </div>
     </form>
   </div>
   <div class="modal-footer">
-		<button type="button" id="reset" class="btn btn-secondary" (click) = "reset();modal.close()">Annuler</button>
 		<button type="submit" id="createQuestion" class="btn btn-primary" (click)="addOrUpdatePlayer();modal.close()">Valider</button>
-	</div>
+    <button type="button" id="reset" class="btn btn-outline-secondary" (click) = "reset();modal.close()">Annuler</button>
+  </div>
 </ng-template>
 
 <ng-template #buttonCharging>
-  <div class="label">
-    <div class = "titre"> Ajouter une image depuis :</div><br><br>
-    <label for="image64playerForm" class="btn btn-success" id = "chargerImage">Cet appareil</label>
+  <div>
+    <label id="imageBtn" for="image64playerForm" class="btn btn-sm btn-info">Ajouter une image</label>
     <input type="file" class="hidden" id="image64playerForm" (change)="imageService.onChangeFile($event,imageTmp)" accept="image/*">
   </div>
 </ng-template>
 
-<ng-template #displayImage>
-  <div class="frame image" *ngIf="imageTmp.url">
-    <button type="button" class="delete" (click)="imageService.removeImg(imageTmp)"><i class="fas fa-times"></i></button>
-    <img class="thumbnail" [src]="imageService.getImgSrc1(imageTmp)" alt="player image">
+<ng-template #displayImage>  
+  <div class="fixed-container" *ngIf="imageTmp.url">
+    <div class="quiz-card">
+      <button type="button" class="delete-button" (click)="imageService.removeImg(imageTmp)"><i class="fas fa-times"></i></button>
+      <img class="frame thumbnail" [src]="imageService.getImgSrc1(imageTmp)" alt="photo">
+    </div>
   </div>
 </ng-template>
 
