--- a/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.html
+++ b/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.html
@@ -20,8 +20,10 @@
 			<form [formGroup]="questionForm">
 			<label class = "label" for="questionName" style="margin-bottom: 1em;">Intitulé : </label>&nbsp;
 			<input type="text" size = "{{sizeInput()}}" [formControlName]="'label'" id="questionName">
-			<ng-template [ngTemplateOutlet]="buttonCharging"></ng-template>  
-			<ng-template [ngTemplateOutlet] ="displayImage"></ng-template> 
+			<div class="imageAndButton">
+			  <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template>  
+			  <ng-template [ngTemplateOutlet] ="displayImage"></ng-template> 
+		    </div>
 			</form>
 		</div>
 	</div>
@@ -32,6 +34,7 @@
   </ng-template>
 
   <ng-template #buttonCharging>
+	<div>
 	<button type="button" class="btn btn-sm btn-info" data-toggle="collapse" data-target="#imgBtns">Ajouter une image 
 		<i class="fas fa-angle-down"></i></button>
 	<div id="imgBtns" class="collapse">
@@ -42,8 +45,20 @@
 		<input type="file" class="hidden" id="image64QuizForm" (change)="globalService.onChangeFile($event,imageTmp)" accept="image/*">
 	    </span>
 	</div>
+   </div>
   </ng-template>
 
+  <ng-template #displayImage>  
+	<div>
+	<div class="fixed-container" *ngIf="imageTmp.url">
+	  <div class="quiz-card">
+		<button class="delete-button" (click)="globalService.removeImg(imageTmp)"><i class="fas fa-times"></i></button>
+		<img class="frame thumbnail" [src]="globalService.getImgSrc1(imageTmp)" alt="quiz image">
+	  </div>
+	</div>
+	</div>
+  </ng-template>
+  <!--
 <ng-template #displayImage>  
 	<div class="fixed-container" *ngIf="imageTmp.url">
 		<div class="delete-button" (click)="globalService.removeImg(imageTmp)">	
@@ -53,4 +68,4 @@
 			<img class="frame thumbnail" [src]="globalService.getImgSrc1(imageTmp)" alt="question image">
 		</div>
 	</div>
-</ng-template>
+</ng-template>-->
