--- a/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.html
+++ b/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.html
@@ -28,8 +28,10 @@
         </select><app-theme-form (themeAdded) = "initTheme($event)"></app-theme-form>  
         <label class = "titre" for="random" style="margin-bottom: 1em">Déroulement aléatoire:</label>
         <input id="random" type="checkbox" [formControlName]="'random'">
-        <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template> 
-        <ng-template [ngTemplateOutlet] = "displayImage"></ng-template>
+        <div class = "imageAndButton">
+          <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template> 
+          <ng-template [ngTemplateOutlet] = "displayImage"></ng-template>
+        </div>
       </form>
     </div>
   </div>
@@ -56,10 +58,12 @@
 </ng-template>
 
 <ng-template #displayImage>  
+  <div>
   <div class="fixed-container" *ngIf="imageTmp.url">
     <div class="quiz-card">
       <button class="delete-button" (click)="globalService.removeImg(imageTmp)"><i class="fas fa-times"></i></button>
       <img class="frame thumbnail" [src]="globalService.getImgSrc1(imageTmp)" alt="quiz image">
     </div>
   </div>
+</div>
 </ng-template>
