--- a/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.scss
+++ b/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.scss
@@ -41,13 +41,23 @@
 }
 
 #imageBtns {
+    margin-left: 0.5;
     margin-top: 0.5em;
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: auto;
+}
+
+#image64Btn {
+    width: 9em;
 }
 
 #image64Btn:hover {
     cursor: pointer;
+}
+
+.imageAndButton{
+    display: grid;
+    grid-template-columns: repeat(2, auto);
 }
 /*
 .modal-larger {
