--- a/front-end/src/app/gallery/gallery.component.html
+++ b/front-end/src/app/gallery/gallery.component.html
@@ -15,21 +15,25 @@
 </body>
 
 <ng-template #deleteImageUsed let-modal>
-    <div  class="modal-header">
-        <h4 class="modal-title" *ngIf = "used()" id="modal-basic-title">Attention image utilisée</h4>
-        <h4 class="modal-title" *ngIf = "!used()" id="modal-basic-title">Confirmation de suppression</h4>
+    <div class="modal-header">
+        <h4 class="modal-title" *ngIf="used(); else notUsed" id="modal-basic-title"><i class="fas fa-exclamation-triangle"></i> Attention image utilisée</h4>
+        <ng-template #notUsed><h4 class="modal-title" id="modal-basic-title">Confirmation de suppression</h4></ng-template>
         <button type="button" class="close" aria-label="Close" (click)="reset();modal.dismiss('Cross click')">
           <span aria-hidden="true">&times;</span>
         </button>
     </div>
-      <div  class="modal-body">
-        <div *ngIf = "!used()"class = "errorMessage">
-            Cette image n'est pas utilisée. Etes-vous sur de vouloir la supprimer ?
+    <div class="modal-body">
+        <div *ngIf = "used(); else notUsedBody" class = "errorMessage">
+                Attention cette image est utilisée dans au moins un quiz. Voulez-vous vraiment la supprimer de façon permanente ?
         </div>
-        <div *ngIf = "used()" class = "errorMessage">
-            Attention l'image que vous allez supprimer est utilisée dans au moins un quiz. Etes-vous sur de la supprimer ?
-        </div>
-      <button class="button-card" (click)="deleteImg(imageSelected);modal.close();reset();"> Confirmer </button>
-      <button class="button-card" (click)="reset();modal.close()"> Annuler </button>
+        <ng-template #notUsedBody>
+            <div class = "errorMessage">
+                Voulez-vous vraiment supprimer cette image de façon permanente ?
+            </div>
+        </ng-template>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-danger" (click)="deleteImg(imageSelected);modal.close();reset();">Supprimer</button>
+      <button class="btn btn-outline-secondary" (click)="reset();modal.close()">Annuler</button>
     </div>
 </ng-template>
