--- a/front-end/src/app/header/header.component.scss
+++ b/front-end/src/app/header/header.component.scss
@@ -11,10 +11,9 @@ a:hover {
 }
 
 .text-center {
-  width: 80%;
-  display: flex;
-  justify-content: center;
-  text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translatex(-50%);
 }
 
 .nav-link {
