--- a/front-end/src/app/core/players/player-form-modal/player-form-modal.component.html
+++ b/front-end/src/app/core/players/player-form-modal/player-form-modal.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <ng-template #noPlayerYet>
-  <button class="btn btn-primary" (click)="modalService.open(playerFormModal)"> 
+  <button class="btn btn-info" (click)="modalService.open(playerFormModal)"> 
     <i class="fas fa-plus-circle"></i> Nouvel Accueilli
   </button>
 </ng-template>
