--- a/front-end/src/app/core/answers/answer-form/answer-form.component.scss
+++ b/front-end/src/app/core/answers/answer-form/answer-form.component.scss
@@ -3,6 +3,11 @@
 @import 'src/styles/common.scss';
 @import 'src/styles/layout.scss';
 
+.top-btn {
+    display: flex;
+    justify-content: center;
+}
+
 .new-answer-form{
     margin-left: auto;
     margin-right: auto;
