--- a/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.html
+++ b/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.html
@@ -1,5 +1,5 @@
 <div class="top-btn">
-<button *ngIf = "!question" type="button" class="btn btn-primary" (click)="modalService.open(questionFormModal)"> 
+<button *ngIf = "!question" type="button" class="btn btn-info" (click)="modalService.open(questionFormModal)"> 
     <i class="fas fa-plus-circle"></i> Nouvelle question
 </button>
 <button *ngIf = "question" type="button" class="btn btn-info" (click)="modalService.open(questionFormModal)"> 
