--- a/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.html
+++ b/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.html
@@ -1,5 +1,5 @@
 <div class="top-btn">
-<button *ngIf = "!quiz" class="btn btn-primary" (click)="modalService.open(quizFormModal)"> 
+<button *ngIf = "!quiz" class="btn btn-info" (click)="modalService.open(quizFormModal)"> 
   <i class="fas fa-plus-circle"></i> Nouveau Quiz
 </button>
 <button *ngIf = "quiz" class="btn btn-info" (click)="modalService.open(quizFormModal)"> 
