--- a/front-end/src/app/core/quizzes/quiz-list-player/quiz-list-player.component.html
+++ b/front-end/src/app/core/quizzes/quiz-list-player/quiz-list-player.component.html
@@ -1,5 +1,5 @@
 <body>
-<app-header [title]="headerTitle" [image]="image" [isHomeBrand]="false"></app-header>
+<app-header [title]="headerTitle" [image]="image" [isHomeBrand]="false" [backIter]="'1'"></app-header>
     <div><!-- just here to fit below div -->
         <div class="btn btn-secondary" style="border: dotted; color: blue; background-color: #ffffff00; float: right;">
             <form [formGroup]="themeForm">
