answersmodal btn charging OK --> all that's left now: chose (navbar + answer card) colors + petit clean

--- a/front-end/src/app/core/answers/answer-form/answer-form.component.html
+++ b/front-end/src/app/core/answers/answer-form/answer-form.component.html
@@ -1,10 +1,12 @@
 <div *ngIf="answer; else noAnswerYet" class="new-answer-form">
     <form [formGroup]="answerForm">
-      <label for="name">Réponse</label><br>
-      <input type="text" size = "{{sizeInput()}}" [formControlName]="'value'" id="name">
+      <label for="name" style="margin-bottom: 0.5em;">Réponse: </label>
+      <input type="text" style="margin-left: 1em;" size = "{{sizeInput()}}" [formControlName]="'value'" id="name">
+      <div class = "imageAndButton" style="margin-bottom: 0.5em;">
+      <ng-template [ngTemplateOutlet]="buttonCharging0"></ng-template>
       <ng-template [ngTemplateOutlet] ="displayImageAns"></ng-template>
-      <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template>
-      Correcte : <input type="checkbox" [formControlName]="'isCorrect'"> <br>
+      </div>
+      Correcte : <input type="checkbox" [formControlName]="'isCorrect'">
       <div class="buttons-bottom" *ngIf = "!answer || onChangeFile || removeImgisCalled">
         <button type="submit" id="submitAnswer" class="btn btn-primary" type="submit" (click)="submitAnswer();">Enregistrer</button>
         <button type="button" id="cancelAnswer" class="btn btn-outline-secondary" (click)="reset();">Annuler</button>
@@ -27,17 +29,16 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <div class="modal-body modal-larger">
+  <div class="modal-body">
     <form [formGroup]="answerForm">
-      <label class = "titre" for="name">Réponse :</label>
-      <input type="text" size = "{{sizeInput()}}" [formControlName]="'value'" id="name">
-      <br>
-      <label for = "correct" class = "titre"> Correcte : </label>
+      <label class = "titre" for="name" style="margin-bottom: 0.5em;">Réponse :</label>
+      <input type="text" size = "{{sizeInput()}}" [formControlName]="'value'" id="name"><br>
+      <label for = "correct" class = "titre" style="margin-bottom: 0.5em;"> Correcte : </label>
       <input id = "correct" type="checkbox" [formControlName]="'isCorrect'">
-      <br>
-      <ng-template [ngTemplateOutlet]="buttonCharging1"></ng-template>
+      <div class = "imageAndButton" style="margin-bottom: 0.5em;">
+      <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template>
       <ng-template [ngTemplateOutlet] ="displayImageAns"></ng-template>
-
+      </div>
     </form>
   </div>
   <div class="modal-footer">
@@ -46,32 +47,29 @@
   </div>
 </ng-template>
 
-
 <ng-template #buttonCharging>
-	<div class="label">
-    Ajouter une image depuis :<br>
-    <label for="image64AnswerForm{{setLabel()}}" class="btn btn-success" >Cet appareil</label>
-	  <input type="file" class="hidden" id="image64AnswerForm{{setLabel()}}" (change)="onChange($event,imageTmp)" accept="image/*">
-    <br>
-    <app-database-image-modal [imageTmp] = "imageTmp" [id] = "setLabel()" (onChangeFile_bis)="received($event)"></app-database-image-modal>
-    <br>
-    <app-internet-image-modal [imageTmp] = "imageTmp" [id] = "setLabel()" (onChangeFile_bis)="received($event)"></app-internet-image-modal>
+  <div>
+  <button type="button" class="btn btn-sm btn-info" data-toggle="collapse" data-target="#imgBtns">Ajouter une image 
+		<i class="fas fa-angle-down"></i></button>
+	<div id="imgBtns" class="collapse">
+    <span id="imageBtns">
+    <app-database-image-modal [imageTmp]="imageTmp" [id]="setLabel()" (onChangeFile_bis)="received($event)"></app-database-image-modal>
+		<app-internet-image-modal [imageTmp]="imageTmp" [id]="setLabel()" (onChangeFile_bis)="received($event)"></app-internet-image-modal>
+	    <label id="image64Btn" for="image64QuizForm{{setLabel()}}" class="btn btn-sm btn-secondary">Cet appareil</label>
+		<input type="file" class="hidden" id="image64QuizForm{{setLabel()}}" (change)="onChange($event,imageTmp)" accept="image/*">
+  </span>
+  </div>
   </div>
 </ng-template>
 
-<ng-template #buttonCharging1>
-  <div class="dropdown">
-    <button class="new-button dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Ajouter une image depuis :
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <app-database-image-modal [imageTmp] = "imageTmp" [id] = "setLabel()" (onChangeFile_bis)="received($event)"></app-database-image-modal>
-      <br>
-      <app-internet-image-modal [imageTmp] = "imageTmp" [id] = "setLabel()" (onChangeFile_bis)="received($event)"></app-internet-image-modal>
-      <br>
-      <label for="image64QuizForm{{setLabel()}}" class="btn btn-success" >Cet appareil</label>
-      <input type="file" class="hidden" id="image64QuizForm{{setLabel()}}" (change)="globalService.onChangeFile($event,imageTmp)" accept="image/*">
-    </div>
+<ng-template #buttonCharging0>
+  <div>
+    <span id="imageBtns">Charger une image : 
+    <app-database-image-modal [imageTmp]="imageTmp" [id]="setLabel()" (onChangeFile_bis)="received($event)"></app-database-image-modal>
+		<app-internet-image-modal [imageTmp]="imageTmp" [id]="setLabel()" (onChangeFile_bis)="received($event)"></app-internet-image-modal>
+	    <label id="image64Btn" style="margin-left: 0.5em;" for="image64QuizForm{{setLabel()}}" class="btn btn-sm btn-secondary">Cet appareil</label>
+		<input type="file" class="hidden" id="image64QuizForm{{setLabel()}}" (change)="onChange($event,imageTmp)" accept="image/*">
+  </span>
   </div>
 </ng-template>
 
