--- a/front-end/src/app/core/answers/answer-form/answer-form.component.scss
+++ b/front-end/src/app/core/answers/answer-form/answer-form.component.scss
@@ -17,10 +17,6 @@
     border-radius: 1em;
 }
 
-.label {
-    margin-top: 0.3em;
-}
-
 .buttons-bottom {
     margin-top: 1em;
 }
@@ -31,6 +27,10 @@
 }
 
 .fixed-container-smaller {
+    float: right;
+}
+
+.fixed-container {
     float: right;
 }
 
@@ -56,9 +56,30 @@
     margin-right: 1em;
 }
 
+#imageBtns {
+    margin-left: 0.5em;
+    margin-top: 0.5em;
+    display: grid;
+    grid-template-columns: auto;
+}
+
+#image64Btn {
+    width: 9em;
+}
+
+#image64Btn:hover {
+    cursor: pointer;
+}
+
+.imageAndButton{
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+}
+
+/*
 .modal-larger {
     height: calc(100vh - 143px);
     min-height: 10em;
     max-height: 18em;
     overflow-y: auto; 
-}
+}*/
