--- a/front-end/src/app/start/home/home.component.html
+++ b/front-end/src/app/start/home/home.component.html
@@ -1,5 +1,5 @@
 <body>
-<app-header [isHomeBrand]="true" [title]="'Quizzy quiz'"></app-header>      
+<app-header [isHomeBrand]="true" [title]="headerTitle"></app-header>      
 <div class="btns-column">
     <div class="big-button" routerLink= "/login">Personnel</div>
     <div class="big-button" routerLink= "/players">Accueilli</div>
